@@ -1,5 +1,4 @@
-import sys, re, random, barcode, datetime, os, shutil, subprocess, keyboard,\
-          collections
+import sys, re, random, barcode, datetime, os, shutil, subprocess, keyboard, collections
 from math import sqrt
 from barcode.writer import ImageWriter 
 from PyQt5.QtCore import Qt, QSize, QRegExp, QAbstractTableModel
@@ -1953,7 +1952,7 @@ def supplierMenu():
     window = Widget()
     window.exec_() 
 
-def processOrders():
+def purchaseMenu():
     mtoday = str(datetime.datetime.now())[0:10]
     metadata = MetaData()
     purchase_orderlines = Table('purchase_orderlines', metadata,
@@ -2031,6 +2030,7 @@ def processOrders():
             self.k0Edit.setFixedWidth(400)
             self.k0Edit.setFont(QFont("Arial",12))
             self.k0Edit.setStyleSheet('color: black; background-color: #F8F7EE')
+            self.k0Edit.addItem('Collecting purchases')
             self.k0Edit.addItem('Manual - ordering')
             self.k0Edit.addItem('Unknown supplier - ordering')
             self.k0Edit.addItem('Receiving / processing deliveries')
@@ -2050,7 +2050,9 @@ def processOrders():
              
             def menuChoice():
                 mconnect = 0
-                if self.k0Edit.currentText().startswith('Manual'):
+                if self.k0Edit.currentText().startswith('Collecting'):
+                    purchaseCollect(self)
+                elif self.k0Edit.currentText().startswith('Manual'):
                     selord = select([purchase_orderlines,suppliers]).where(and_\
                       (purchase_orderlines.c.ordering_manual==1, purchase_orderlines.c.\
                        order_date=='', purchase_orderlines.c.supplierID==\
@@ -2744,80 +2746,6 @@ def processOrders():
     window = Widget()
     window.exec_() 
 
-def purchaseMenu():
-    class Widget(QDialog):
-        def __init__(self, parent=None):
-            super(Widget, self).__init__(parent)
-            self.setWindowTitle("Purchase Submenu")
-            self.setWindowIcon(QIcon('./logos/logo.jpg'))
-            self.setWindowFlags(self.windowFlags()| Qt.WindowSystemMenuHint |
-                                Qt.WindowMinimizeButtonHint) #Qt.WindowMinMaxButtonsHint
-            self.setWindowFlag(Qt.WindowCloseButtonHint, False)
-                   
-            self.setFont(QFont('Arial', 10))
-            self.setStyleSheet("background-color: #D9E1DF") 
-                
-            grid = QGridLayout()
-            grid.setSpacing(20)      
-                
-            pyqt = QLabel()
-            movie = QMovie('./logos/pyqt.gif')
-            pyqt.setMovie(movie)
-            movie.setScaledSize(QSize(240,80))
-            movie.start()
-            grid.addWidget(pyqt, 0 ,0, 1, 3)
-       
-            logo = QLabel()
-            pixmap = QPixmap('./logos/logo.jpg')
-            logo.setPixmap(pixmap.scaled(70,70))
-            grid.addWidget(logo , 0, 2, 1 ,1, Qt.AlignRight)
- 
-            self.k0Edit = QComboBox()
-            self.k0Edit.setFixedWidth(400)
-            self.k0Edit.setFont(QFont("Arial",12))
-            self.k0Edit.setStyleSheet('color: black; background-color: #F8F7EE')
-            self.k0Edit.addItem('Ordering / process deliveries / views')
-            self.k0Edit.addItem('Collecting purchases')
-                                             
-            def k0Changed():
-                self.k0Edit.setCurrentIndex(self.k0Edit.currentIndex())
-            self.k0Edit.currentIndexChanged.connect(k0Changed)
-            
-            grid.addWidget(self.k0Edit, 1, 1, 1, 2)
-                           
-            def menuChoice(self):
-                mindex = self.k0Edit.currentIndex()
-                if mindex == 0:
-                    processOrders()
-                elif mindex == 1:
-                    purchaseCollect(self)
-                                     
-            applyBtn = QPushButton('Select')
-            applyBtn.clicked.connect(lambda: menuChoice(self))
-            applyBtn.setFont(QFont("Arial",10))
-            applyBtn.setFixedWidth(100)
-            applyBtn.setStyleSheet("color: black;  background-color: gainsboro")
-            
-            grid.addWidget(applyBtn, 2, 2)
-            
-            closeBtn = QPushButton('Close')
-            closeBtn.clicked.connect(self.close)  
-            closeBtn.setFont(QFont("Arial",10))
-            closeBtn.setFixedWidth(100)
-            closeBtn.setStyleSheet("color: black;  background-color: gainsboro")
-            
-            grid.addWidget(closeBtn, 2, 1, 1, 1, Qt.AlignRight)
-                 
-            lbl3 = QLabel('\u00A9 2020 all rights reserved dj.jansen@casema.nl')
-            lbl3.setFont(QFont("Arial", 10))
-            grid.addWidget(lbl3, 3, 0, 1, 3, Qt.AlignCenter)
-           
-            self.setLayout(grid)
-            self.setGeometry(900, 200, 150, 100)
-                
-    window = Widget()
-    window.exec_() 
-    
 def groupButtons():
     class Widget(QDialog):
         def __init__(self, data_list, header, *args):
